; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_crisv10.c_e100_enable_rx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_crisv10.c_e100_enable_rx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.e100_serial = type { i32*, i32 }

@R_SERIAL0_REC_CTRL = common dso_local global i32 0, align 4
@rec_enable = common dso_local global i32 0, align 4
@REG_REC_CTRL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.e100_serial*)* @e100_enable_rx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @e100_enable_rx(%struct.e100_serial* %0) #0 {
  %2 = alloca %struct.e100_serial*, align 8
  store %struct.e100_serial* %0, %struct.e100_serial** %2, align 8
  %3 = load i32, i32* @R_SERIAL0_REC_CTRL, align 4
  %4 = load i32, i32* @rec_enable, align 4
  %5 = call i32 @IO_MASK(i32 %3, i32 %4)
  %6 = load %struct.e100_serial*, %struct.e100_serial** %2, align 8
  %7 = getelementptr inbounds %struct.e100_serial, %struct.e100_serial* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 8
  %9 = or i32 %8, %5
  store i32 %9, i32* %7, align 8
  %10 = load %struct.e100_serial*, %struct.e100_serial** %2, align 8
  %11 = getelementptr inbounds %struct.e100_serial, %struct.e100_serial* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = load i64, i64* @REG_REC_CTRL, align 8
  %14 = getelementptr inbounds i32, i32* %12, i64 %13
  store i32 %9, i32* %14, align 4
  ret void
}

declare dso_local i32 @IO_MASK(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
